# kafka_cluster-topics-partition_count_recommender-tool

./: .gitignore  CHANGELOG.md  KafkaTopicsAnalyzer.py  README.md  app-sequence-diagram.mmd  app.py  pyproject.toml
.blog/: why-do-you-need-the-confluent-cloud-api-key.md
src/: KafkaTopicsAnalyzer.py  app.py  confluent_credentials.py  constants.py  kafka_topics_analyzer.py  thread_safe_app.py  thread_safe_csv_writer.py  thread_safe_kafka_topics_analyzer.py  thread_safe_kafka_writer.py  thread_safe_tool.py  thread_safe_topic_analyzer.py  utilities.py
tests/: test_environment_client.py  test_fetch_kafka_credentials_via_confluent_cloud_api_key.py  test_fetch_kafka_credentials_via_env_file.py  test_fetch_kafka_credentials_via_environment_variables.py  test_iam_client.py  test_metrics_client.py  test_schema_registry_client.py
