[project]
name = "kafka-cluster-topics-partition-count_recommender-app"
version = "0.01.00.000"
description = "Kafka Cluster Topics Partition Count Recommender Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.11.1",
    "dotenv>=0.9.9",
    "pytest>=8.4.2",
]

[tool.logging]
log_file = "kafka-cluster-topics-partition-count-analyzer-app.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pytest.ini_options]
log_file = "kafka-cluster-topics-partition-count-analyzer-app-test.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
