[project]
name = "kafka_cluster-topics-partition-count_recommender-app"
version = "0.09.00.000"
description = "Kafka Cluster Topics Partition Count Recommender Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-clients-python-lib>=0.10.0.0",
    "cc-clients-python-lib==0.28.3.0",
    "confluent-kafka>=2.11.1",
    "dotenv>=0.9.9",
    "pytest>=8.4.2",
]

[tool.setuptools]
packages = ["src"]

# Logging configuration
[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.default]
format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
datefmt = "%Y-%m-%d %H:%M:%S"

[tool.logging.handlers.file]
class = "logging.FileHandler"
filename = "kafka-cluster-topics-partition-count-recommender-app.log"
formatter = "default"
level = "INFO"
mode = "w"

[tool.logging.handlers.console]
class = "logging.StreamHandler"
formatter = "default"
level = "DEBUG"

[tool.logging.loggers.root]
level = "INFO"
handlers = ["file", "console"]

[tool.pytest.ini_options]
log_file = "kafka-cluster-topics-partition-count-recommender-app-test.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
