[project]
name = "kafka_cluster-topics-partition_count_recommender-tool"
version = "0.12.05.000"
description = "Kafka Cluster Topics Partition Count Recommender Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.5",
    "aws-clients-python-lib>=0.10.0.0",
    "cachetools>=6.2.0",
    "cc-clients-python-lib==0.30.3.0",
    "confluent-kafka>=2.11.1",
    "dotenv>=0.9.9",
    "jsonschema>=4.25.1",
    "orjson>=3.11.3",
    "pytest>=8.4.2",
    "referencing>=0.36.2",
]

[tool.setuptools]
packages = ["src"]

# Logging configuration
[tool.logging]
version = 1
disable_existing_loggers = false

[tool.logging.formatters.default]
format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
datefmt = "%Y-%m-%d %H:%M:%S"

[tool.logging.handlers.file]
class = "logging.FileHandler"
filename = "kafka-cluster-topics-partition-count-recommender-tool.log"
formatter = "default"
level = "INFO"
mode = "w"

[tool.logging.handlers.console]
class = "logging.StreamHandler"
formatter = "default"
level = "DEBUG"

[tool.logging.loggers.root]
level = "INFO"
handlers = ["file", "console"]

[tool.pytest.ini_options]
pythonpath = ["src"]
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(levelname)s - %(funcName)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
